package at.htl.entity;

public enum Category {
    CLOTHING,
    BOOKS,
    ELECTRONICS,
    GASTRONOMY,
    ENTERTAINMENT
}
